# mempeep

./: CMakePresets.json  LICENSE  vcpkg.json
cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt  example.cpp
cpp/include/mempeep/: desc_size.hpp  descriptors.hpp  error.hpp  errors.hpp  fields.hpp  read.hpp  read_size.hpp  size.hpp
cpp/include/mempeep/concepts/: tracer.hpp
cpp/include/mempeep/detail/: fields_items.hpp  member_traits.hpp  remote_value.hpp
cpp/include/mempeep/detail/concepts/: memory.hpp  tracer.hpp
cpp/include/mempeep/test/: memory.hpp
cpp/include/mempeep/tracers/: log_tracer.hpp  ok_tracer.hpp
cpp/test/: test_concepts_address_header.cpp  test_concepts_address_static.cpp  test_concepts_descriptor_header.cpp  test_concepts_descriptors_header.cpp  test_concepts_fields_item_header.cpp  test_concepts_memory_header.cpp  test_concepts_memory_static.cpp  test_concepts_primitive_header.cpp  test_concepts_tracer_header.hpp  test_desc_size_header.cpp  test_desc_size_static.cpp  test_descriptors_header.cpp  test_descriptors_static.cpp  test_error_header.cpp  test_fields_items_header.cpp  test_log_tracer.cpp  test_log_tracer_header.cpp  test_member_traits_static.cpp  test_ok_tracer.cpp  test_read.cpp  test_read_size_header.cpp  test_read_size_static.cpp  test_remote_value_header.cpp  test_size_header.cpp  test_size_static.cpp  test_tracers_ok_tracer.cpp
cpp/test/support/: mock_game.hpp  mock_game_data.hpp
lua/: test.lua
lua/mempeep/: ctype.lua  ctypes.lua  descriptor.lua  descriptors.lua  error.lua  errors.lua  init.lua  read.lua  size.lua
(+9 files in other folders)
